<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fffefe"
        android:drawableLeft="@drawable/ic_username_selector"
        android:drawablePadding="16dp"
        android:hint="@string/hint_username"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_pwd_selector"
        android:drawablePadding="16dp"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_login"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/tv_forget_pwd"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle_size" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/tv_register"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle_size" />
    </LinearLayout>

</LinearLayout>