<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_username_selector"
        android:drawablePadding="16dp"
        android:hint="@string/hint_username"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_pwd_selector"
        android:drawablePadding="16dp"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:hint="@string/hint_nickname"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:hint="@string/hint_phonenumber"
        android:inputType="phone"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <Button
        android:id="@+id/reg_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_registe"
        android:textColor="#ffffff" />

</LinearLayout>