<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/empty"
        android:scaleType="fitCenter"
        android:src="@drawable/welcome_ad" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main_bg"
        android:padding="16dp" >

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="#ff0000"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/welcome_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large_size"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_1"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/tv_1"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle_size" />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_copyright"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small_size" />
    </RelativeLayout>

</LinearLayout>